--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 17px 20px;
+    gap: 20px 17px;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -19,5 +19,6 @@
     .elements__list {
     grid-template-columns: 1fr;
     margin: 0 auto;
+    gap: 20px;
     }
 }
