--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,11 @@
 .footer__copyright {
-    font-family: 'Inter';
+    width: 100%;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #545454;
-    text-align: left;
+    margin: 0;
 }
 
 @media screen and (max-width: 1023px) {
