--- a/blocks/form/__input-label/form__input-label.css
+++ b/blocks/form/__input-label/form__input-label.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     min-height: 58px;
 }
+
+@media screen and (max-width: 768px) {
+    .form__input-label{
+        min-height: 27px;
+    }
+    }
