--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    padding: 0 0 7px 0;
+    padding: 4px 0 10px 1px;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
