--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,5 @@
 .profile__description {
+    max-width: 336px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -7,6 +8,9 @@
     color: #FFFFFF;
     margin: 0;
     margin-left: 30px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
